--- a/templates/template-1/content.html
+++ b/templates/template-1/content.html
@@ -5,7 +5,7 @@
   </div>
   <div class="template-content">
     <div class="welcome info-block">Welcomes You</div>
-    <div class="info-block">
+    <div class="info-block" id="address">
       <span class="data">GOKUL FUEL POINT YELANAHALLI, BEGUR 560068</span>
     </div>
     <div class="info-block">
