--- a/templates/template-1/content.html
+++ b/templates/template-1/content.html
@@ -1,68 +1,68 @@
 <link rel="stylesheet" href="/templates/template-1/styles.css" />
 <div id="template-1" class="template-container zig-zag-top-bottom">
   <div class="pump-logo">
-    <img src="/assets/images/pump-logo-indian-oil.webp" />
+    <img src="" id="pumpLogo" />
   </div>
   <div class="template-content">
     <div class="welcome info-block">Welcomes You</div>
     <div class="info-block" id="address">
-      <span class="data">GOKUL FUEL POINT YELANAHALLI, BEGUR 560068</span>
+      <span class="data"></span>
     </div>
     <div class="info-block">
       <div class="line-item" id="receiptNo">
         <span class="label">Receipt No.</span>
         <span class="separator">:</span>
-        <span class="data">0000000000</span>
+        <span class="data"></span>
       </div>
       <div class="line-item" id="localId">
         <span class="label">Local ID</span>
         <span class="separator">:</span>
-        <span class="data">0000000000</span>
+        <span class="data"></span>
       </div>
       <div class="line-item" id="fipNo">
         <span class="label">FIP No.</span>
         <span class="separator">:</span>
-        <span class="data">1</span>
+        <span class="data"></span>
       </div>
       <div class="line-item" id="nozzelNo">
         <span class="label">Nozzle No.</span>
         <span class="separator">:</span>
-        <span class="data">1</span>
+        <span class="data"></span>
       </div>
       <div class="line-item" id="product">
         <span class="label">Product</span>
         <span class="separator">:</span>
-        <span class="data">Petrol</span>
+        <span class="data"></span>
       </div>
     </div>
     <div class="info-block">
       <div class="line-item" id="presetType">
         <span class="label">Preset Type</span>
         <span class="separator">:</span>
-        <span class="data">Amount</span>
+        <span class="data"></span>
       </div>
       <div class="line-item" id="rate">
         <span class="label">Rate(Rs/L)</span>
         <span class="separator">:</span>
-        <span class="data">101.94</span>
+        <span class="data"></span>
       </div>
       <div class="line-item" id="volume">
         <span class="label">Volume(L)</span>
         <span class="separator">:</span>
-        <span class="data">0001.96</span>
+        <span class="data"></span>
       </div>
       <div class="line-item" id="amount">
         <span class="label">Amount(Rs)</span>
         <span class="separator">:</span>
-        <span class="data">200.00</span>
+        <span class="data"></span>
       </div>
       <div class="line-item" id="atot">
         <span class="label">Atot</span> <span class="separator">:</span>
-        <span class="data">0000000000.000</span>
+        <span class="data"></span>
       </div>
       <div class="line-item" id="vtot">
         <span class="label">Vtot</span> <span class="separator">:</span>
-        <span class="data">0000000000.000</span>
+        <span class="data"></span>
       </div>
     </div>
 
@@ -70,23 +70,23 @@
       <div class="line-item" id="vehicleNo">
         <span class="label">Vehicle No</span>
         <span class="separator">:</span>
-        <span class="data">Not Entered</span>
+        <span class="data"></span>
       </div>
       <div class="line-item" id="mobileNo">
         <span class="label">Mobile No</span>
         <span class="separator">:</span>
-        <span class="data">Not Entered</span>
+        <span class="data"></span>
       </div>
     </div>
 
     <div class="info-block">
       <div class="line-item" id="date">
         <span class="label">Date</span> <span class="separator">:</span>
-        <span class="data">00/00/00</span>
+        <span class="data"></span>
       </div>
       <div class="line-item" id="time">
         <span class="label">Time</span> <span class="separator">:</span>
-        <span class="data">10<span class="separator">:</span>00</span>
+        <span class="data"></span>
       </div>
     </div>
     <div class="info-block business-info">
@@ -105,17 +105,17 @@
       <div class="line-item" id="attendantId">
         <span class="label">ATTENDANT ID</span>
         <span class="separator">:</span>
-        <span class="data">Not Available</span>
+        <span class="data"></span>
       </div>
       <div class="line-item" id="fccDate">
         <span class="label">FCC DATE</span>
         <span class="separator">:</span>
-        <span class="data">Not Available</span>
+        <span class="data"></span>
       </div>
       <div class="line-item" id="fccTime">
         <span class="label">FCC TIME</span>
         <span class="separator">:</span>
-        <span class="data">Not Available</span>
+        <span class="data"></span>
       </div>
     </div>
     <div class="footer">Thanks You! Please Visit Again..</div>
