--- a/templates/template-1/content.html
+++ b/templates/template-1/content.html
@@ -90,6 +90,10 @@
       </div>
     </div>
     <div class="info-block business-info">
+      <div class="line-item" id="gstNo">
+        <span class="label">GSTIN</span> <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
       <div class="line-item" id="cstNo">
         <span class="label">CST No</span> <span class="separator">:</span>
         <span class="data"></span>
