--- a/templates/template-2/content.html
+++ b/templates/template-2/content.html
@@ -1,1 +1,200 @@
-<h1>Template 2</h1>
+<link rel="stylesheet" href="templates/template-2/styles.css" />
+<div id="template-2" class="template-container zig-zag-top-bottom">
+  <div class="template-content">
+    <div class="header">TAX INVOICE</div>
+    <div class="header">VENKATESWARA AND CO.</div>
+    <div class="sub-header">DEALERS IN BHARAT PETROLEUM CORP LTD</div>
+    <div class="sub-header">HOSUR MAIN ROAD MADIWALA BLR-68</div>
+    <div class="sub-header">GSTIN NO XXXXXXXXXXX</div>
+    <table>
+      <tr>
+        <td></td>
+        <td></td>
+        <td><span class="label">DATE:</span></td>
+        <td><span class="data">21/08/24</span></td>
+      </tr>
+      <tr>
+        <td>
+          <span class="label">BILL NO:</span>
+          <span class="data">49121</span>
+        </td>
+        <td></td>
+        <td><span class="label">TIME:</span></td>
+        <td><span class="data">16:35</span></td>
+      </tr>
+      <tr>
+        <td>
+          <span class="label">NAME:</span>
+          <span class="data"></span>
+        </td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+      <tr>
+        <td colspan="4">
+          <hr class="dotted-hr" />
+        </td>
+      </tr>
+      <tr>
+        <td><span class="label">ITEM NAME</span></td>
+        <td><span class="label">QTY</span></td>
+        <td><span class="label">PRICE</span></td>
+        <td><span class="label">AMOUNT</span></td>
+      </tr>
+      <tr>
+        <td colspan="4">
+          <hr class="dotted-hr" />
+        </td>
+      </tr>
+      <tr>
+        <td><span class="data">PETROL</span></td>
+        <td><span class="data">1.944Lt</span></td>
+        <td><span class="data">102.90</span></td>
+        <td><span class="data">200.00</span></td>
+      </tr>
+      <tr>
+        <td colspan="4">
+          <hr class="dotted-hr" />
+        </td>
+      </tr>
+      <tr>
+        <td><span class="label">TOTAL ITEM(S):1</span></td>
+        <td><span class="label">/QTY:</span><span>1.944</span></td>
+        <td><span class="label"></span></td>
+        <td><span class="label"></span><span>200.00</span></td>
+      </tr>
+      <tr>
+        <td colspan="4">
+          <hr class="dotted-hr" />
+        </td>
+      </tr>
+      <tr>
+        <td><span class="label">TOTAL:</span></td>
+        <td><span class="label"></span></td>
+        <td><span class="label"></span></td>
+        <td>₹ <span class="data">200.00</span></td>
+      </tr>
+      <tr>
+        <td colspan="4">
+          <hr class="dotted-hr" />
+        </td>
+      </tr>
+    </table>
+    <!-- <div class="info-block">
+      <div class="line-item" id="receiptNo">
+        <span class="label">Receipt No.</span>
+        <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="localId">
+        <span class="label">Local ID</span>
+        <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="fipNo">
+        <span class="label">FIP No.</span>
+        <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="nozzelNo">
+        <span class="label">Nozzle No.</span>
+        <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="product">
+        <span class="label">Product</span>
+        <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+    </div> -->
+    <!-- <div class="info-block">
+      <div class="line-item" id="presetType">
+        <span class="label">Preset Type</span>
+        <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="rate">
+        <span class="label">Rate(Rs/L)</span>
+        <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="volume">
+        <span class="label">Volume(L)</span>
+        <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="amount">
+        <span class="label">Amount(Rs)</span>
+        <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="atot">
+        <span class="label">Atot</span> <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="vtot">
+        <span class="label">Vtot</span> <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+    </div> -->
+
+    <!-- <div class="info-block">
+      <div class="line-item" id="vehicleNo">
+        <span class="label">Vehicle No</span>
+        <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="mobileNo">
+        <span class="label">Mobile No</span>
+        <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+    </div> -->
+
+    <!-- <div class="info-block">
+      <div class="line-item" id="date">
+        <span class="label">Date</span> <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="time">
+        <span class="label">Time</span> <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+    </div> -->
+    <!-- <div class="info-block business-info">
+      <div class="line-item" id="gstNo">
+        <span class="label">GSTIN</span> <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="cstNo">
+        <span class="label">CST No</span> <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="lstNo">
+        <span class="label">LST No</span> <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="vatNo">
+        <span class="label">VAT No</span> <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="attendantId">
+        <span class="label">ATTENDANT ID</span>
+        <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="fccDate">
+        <span class="label">FCC DATE</span>
+        <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+      <div class="line-item" id="fccTime">
+        <span class="label">FCC TIME</span>
+        <span class="separator">:</span>
+        <span class="data"></span>
+      </div>
+    </div> -->
+    <!-- <div class="footer">Thanks You! Please Visit Again..</div> -->
+  </div>
+</div>
