--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -34,3 +34,10 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+  font-family: "Arial";
+  src: url("../fonts/arial-font/arial.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
