--- a/templates/template-3/content.html
+++ b/templates/template-3/content.html
@@ -22,41 +22,43 @@
       </tr>
       <tr>
         <td id="date">
-          <span class="label">DATE:<span class="data">02-09-2024</span></span>
+          <span class="label">DATE: <span class="data">02-09-2024</span></span>
         </td>
         <td id="time">
-          <span class="label">TIME:<span class="data">11:36:02</span></span>
+          <span class="label">TIME: <span class="data">11:36:02</span></span>
         </td>
       </tr>
       <tr>
         <td id="mid">
           <span class="label"
-            >MID:<span class="data">470000099233218</span></span
+            >MID: <span class="data">47000009923321</span></span
           >
         </td>
         <td id="tid">
-          <span class="label">TID:<span class="data">00608672</span></span>
+          <span class="label">TID: <span class="data">00608672</span></span>
         </td>
       </tr>
       <tr>
         <td id="batchNo">
-          <span class="label">BATCH No:<span class="data">000114</span></span>
+          <span class="label">BATCH No: <span class="data">000114</span></span>
         </td>
         <td id="invoiceNo">
-          <span class="label">INVOICE No:<span class="data">002394</span></span>
+          <span class="label"
+            >INVOICE No: <span class="data">002394</span></span
+          >
         </td>
       </tr>
       <tr>
         <td id="gstNo">
-          <span class="label">GSTIN:<span class="data"></span></span>
+          <span class="label">GSTIN: <span class="data"></span></span>
         </td>
         <td id="cstNo">
-          <span class="label">CST No:<span class="data"></span></span>
+          <span class="label">CST No: <span class="data"></span></span>
         </td>
       </tr>
       <tr>
         <td id="vatNo">
-          <span class="label">VAT No:<span class="data"></span></span>
+          <span class="label">VAT No: <span class="data"></span></span>
         </td>
         <td></td>
       </tr>
@@ -68,7 +70,7 @@
       <tr>
         <td colspan="2" id="card">
           <span class="label"
-            >CARD <span class="data">**** **** **** 1234 CLss</span></span
+            >CARD <span class="data">**** **** **** 1234 CLSS</span></span
           >
         </td>
       </tr>
@@ -77,21 +79,21 @@
           <span class="label data">MASTERCARD</span>
         </td>
         <td id="expDate">
-          <span class="label">EXP DATE:<span class="data">**/**</span></span>
+          <span class="label">EXP DATE: <span class="data">**/**</span></span>
         </td>
       </tr>
       <tr>
         <td id="txnType">
-          <span class="label">Txn Type:<span class="data">CARD</span></span>
+          <span class="label">Txn Type: <span class="data">CARD</span></span>
         </td>
         <td></td>
       </tr>
       <tr>
         <td id="apprCode">
-          <span class="label">APPR CODE:<span class="data">15930</span></span>
+          <span class="label">APPR CODE: <span class="data">15930</span></span>
         </td>
         <td id="rrn">
-          <span class="label">RRN:<span class="data">090200003919</span></span>
+          <span class="label">RRN: <span class="data">090200003919</span></span>
         </td>
       </tr>
       <tr>
@@ -104,10 +106,10 @@
       </tr>
       <tr>
         <td id="tsi">
-          <span class="label">TSI:<span class="data">0000</span></span>
+          <span class="label">TSI: <span class="data">0000</span></span>
         </td>
         <td id="atc">
-          <span class="label">ATC:<span class="data">******</span></span>
+          <span class="label">ATC: <span class="data">******</span></span>
         </td>
       </tr>
       <tr>
@@ -145,7 +147,7 @@
       <tr>
         <td id="unitPrice">
           <span class="label"
-            >Unit Price:<span class="data">$ 102.86</span></span
+            >Unit Price: <span class="data">$ 102.86</span></span
           >
         </td>
         <td id="quantity">
