--- a/templates/template-3/content.html
+++ b/templates/template-3/content.html
@@ -5,60 +5,62 @@
   </div>
   <div class="template-content">
     <div class="header" id="name">
-      <span class="data">GOKUL FUEL POINT</span>
+      <span class="data"></span>
     </div>
     <div class="header" id="address">
-      <span class="data">No. 36/1, Yelanahalli Beg</span>
+      <span class="data"></span>
     </div>
     <div class="header" id="subAddress">
-      <span class="data">BANGALORE</span>
+      <span class="data"></span>
     </div>
     <table>
       <tr>
         <td colspan="2" id="attendantName">
           <span class="label">Attendant Name</span> -
-          <span class="data">Sendhil Kumar A</span>
+          <span class="data"></span>
         </td>
       </tr>
       <tr>
         <td id="date">
-          <span class="label">DATE: <span class="data">02-09-2024</span></span>
+          <span class="label">DATE: <span class="data"></span></span>
         </td>
         <td id="time">
-          <span class="label">TIME: <span class="data">11:36:02</span></span>
+          <span class="label">TIME: <span class="data"></span></span>
         </td>
       </tr>
       <tr>
         <td id="mid">
-          <span class="label"
-            >MID: <span class="data">47000009923321</span></span
-          >
+          <span class="label">MID: <span class="data"></span></span>
         </td>
         <td id="tid">
-          <span class="label">TID: <span class="data">00608672</span></span>
+          <span class="label">TID: <span class="data"></span></span>
         </td>
       </tr>
       <tr>
         <td id="batchNo">
-          <span class="label">BATCH No: <span class="data">000114</span></span>
+          <span class="label">BATCH No: <span class="data"></span></span>
         </td>
         <td id="invoiceNo">
-          <span class="label"
-            >INVOICE No: <span class="data">002394</span></span
-          >
+          <span class="label">INVOICE No: <span class="data"></span></span>
         </td>
       </tr>
       <tr>
-        <td id="gstNo">
-          <span class="label">GSTIN: <span class="data"></span></span>
+        <td id="showGST">
+          <span id="gstNo" class="label"
+            >GSTIN: <span class="data"></span
+          ></span>
         </td>
-        <td id="cstNo">
-          <span class="label">CST No: <span class="data"></span></span>
+        <td id="showCST">
+          <span id="cstNo" class="label"
+            >CST No: <span class="data"></span
+          ></span>
         </td>
       </tr>
       <tr>
-        <td id="vatNo">
-          <span class="label">VAT No: <span class="data"></span></span>
+        <td id="showVAT">
+          <span id="vatNo" class="label"
+            >VAT No: <span class="data"></span
+          ></span>
         </td>
         <td></td>
       </tr>
@@ -69,31 +71,29 @@
       </tr>
       <tr>
         <td colspan="2" id="card">
-          <span class="label"
-            >CARD <span class="data">**** **** **** 1234 CLSS</span></span
-          >
+          <span class="label">CARD <span class="data"></span></span>
         </td>
       </tr>
       <tr>
         <td id="cardType">
-          <span class="label data">MASTERCARD</span>
+          <span class="label data"></span>
         </td>
         <td id="expDate">
-          <span class="label">EXP DATE: <span class="data">**/**</span></span>
+          <span class="label">EXP DATE: <span class="data"></span></span>
         </td>
       </tr>
       <tr>
         <td id="txnType">
-          <span class="label">Txn Type: <span class="data">CARD</span></span>
+          <span class="label">Txn Type: <span class="data"></span></span>
         </td>
         <td></td>
       </tr>
       <tr>
         <td id="apprCode">
-          <span class="label">APPR CODE: <span class="data">15930</span></span>
+          <span class="label">APPR CODE: <span class="data"></span></span>
         </td>
         <td id="rrn">
-          <span class="label">RRN: <span class="data">090200003919</span></span>
+          <span class="label">RRN: <span class="data"></span></span>
         </td>
       </tr>
       <tr>
@@ -101,15 +101,15 @@
           <span class="label">TC:</span>
         </td>
         <td id="tc">
-          <span class="data">560E803334B60636</span>
+          <span class="data"></span>
         </td>
       </tr>
       <tr>
         <td id="tsi">
-          <span class="label">TSI: <span class="data">0000</span></span>
+          <span class="label">TSI: <span class="data"></span></span>
         </td>
         <td id="atc">
-          <span class="label">ATC: <span class="data">******</span></span>
+          <span class="label">ATC: <span class="data"></span></span>
         </td>
       </tr>
       <tr>
@@ -117,7 +117,7 @@
           <span class="label">TVR:</span>
         </td>
         <td id="tvr">
-          <span class="data">000000801</span>
+          <span class="data"></span>
         </td>
       </tr>
       <tr>
@@ -125,7 +125,7 @@
           <span class="label">AID:</span>
         </td>
         <td id="aid">
-          <span class="data">A0000000041010</span>
+          <span class="data"></span>
         </td>
       </tr>
       <tr>
@@ -133,7 +133,7 @@
           <span class="label">Product:</span>
         </td>
         <td id="product">
-          <span class="data">Petrol</span>
+          <span class="data"></span>
         </td>
       </tr>
       <tr>
@@ -141,25 +141,23 @@
           <span class="label">Txn Id:</span>
         </td>
         <td id="txnId">
-          <span class="data">2409020060862113540</span>
+          <span class="data"></span>
         </td>
       </tr>
       <tr>
         <td id="unitPrice">
-          <span class="label"
-            >Unit Price: <span class="data">$ 102.86</span></span
-          >
+          <span class="label">Unit Price: <span class="data"></span></span>
         </td>
         <td id="quantity">
-          <span class="label">Quantity<span class="data">1.944 Ltr</span></span>
+          <span class="label">Quantity<span class="data"></span></span>
         </td>
       </tr>
       <tr>
         <td id="pumpNo">
-          <span class="label">Pump No<span class="data">8</span></span>
+          <span class="label">Pump No<span class="data"></span></span>
         </td>
         <td id="nozzleNo">
-          <span class="label">Nozzle No<span class="data">1</span></span>
+          <span class="label">Nozzle No<span class="data"></span></span>
         </td>
       </tr>
       <tr>
@@ -167,7 +165,7 @@
           <span class="label">Total Sale:</span>
         </td>
         <td id="totalSale">
-          <span class="data">₹ 200.00</span>
+          <span class="data"></span>
         </td>
       </tr>
       <tr>
@@ -180,7 +178,7 @@
           <span class="label">Net Amount</span>
         </td>
         <td>
-          <span class="data">₹ 200.00</span>
+          <span class="data"></span>
         </td>
       </tr>
       <tr>
@@ -215,9 +213,7 @@
       </tr>
       <tr>
         <td colspan="2" class="center">
-          <span class="label" id="version"
-            ><span class="data">1.06.09_20240607</span></span
-          >
+          <span class="label" id="version"><span class="data"></span></span>
         </td>
       </tr>
       <tr>
